--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   scroll_to_index: ^3.0.1
   url_launcher: ^6.1.5
   visibility_detector: ^0.3.3
+  pull_to_refresh_flutter3: ^2.0.1
 
 dev_dependencies:
   dart_code_metrics: ^4.17.0
